# pigeon_yolo

./: README.md  check.py  crops.py  crops2blood.py  crops2blood_clean.py  pairs.py  predict.py  pyproject.toml  test.py  train.py  unzip.py  yoloData.py
project/: app.py
project/models/: siamese.py
project/static/: index.html
project/utils/: embedding.py  faiss_search.py  yolo_crop.py
retrieval/: build_index.py  meta.csv  query.py
siamese/: dataset.py  embed_all.py  model.py  train.py
